--- a/assets/style.css
+++ b/assets/style.css
@@ -19,11 +19,14 @@ html,body{
     scroll-behavior: smooth;
 }
 body{
+    background-color: hsl(216, 12%, 8%);
+}
+main{
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: hsl(216, 12%, 8%);
 }
 
 /* Card */
@@ -33,15 +36,15 @@ body{
     left: 50%;
     transform: translateX(-50%);
 
-    width: 80%;
+    width: 90%;
     max-width: 415px;
     min-height: 412px;
     border-radius: 30px;
     padding: 30px 35px;
     
-    background: linear-gradient(360deg, rgb(27, 31, 35),  rgb(35, 43, 52));
+    background: linear-gradient(360deg, rgb(27, 31, 35),  rgb(29, 36, 43));
 }
-.card h3{
+.card h1{
     color: rgb(255, 255, 255);
     font-weight: 700;
     font-size: 1.6rem;
@@ -102,7 +105,7 @@ body{
     color: rgb(149, 158, 172);
     background-color: rgb(42, 52, 65);
 
-    transition: background-color .3s ease, color .3s ease, transform .3s ease;
+    transition: background-color .2s ease, color .2s ease, transform .2s ease;
 }
 .not-submitted ul li.active{
     background-color: rgb(251, 116, 19);
@@ -190,7 +193,7 @@ body{
 
 
 /* Attribution Card */
-.attribution{
+footer{
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
@@ -202,16 +205,16 @@ body{
     background-color: rgb(251, 116, 19);
     border-radius: 20px 20px 0 0;
 }
-.attribution p{
+footer p{
     font-size: .95rem;
     font-weight: 300;
     color: rgb(33, 33, 33);
 }
-.attribution a{
+footer a{
     position: relative;
     color: rgb(33, 33, 33);
 }
-.attribution a::after{
+footer a::after{
     content: '';
     display: block;
     position: absolute;
@@ -223,12 +226,12 @@ body{
     left: 50%;
     transform: translateX(-50%);
 }
-.attribution a:hover::after{
+footer a:hover::after{
     width: 100%;
 }
 
 /* Media Queries */
-@media(max-width: 375px){
+@media(max-width: 415px){
     .card{
         padding: 30px 25px;
     }
